[tool.poetry]
name = "web-chat"
version = "0.1.0"
description = ""
authors = ["nizdolin <nizdolin@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.0"
motor = "^3.6.0"
uvicorn = {extras = ["all"], version = "^0.31.0"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
