[project]
name = "web-chat"
version = "0.1.0"
description = "Web chat based on FastAPI, Kafka and Websockets."
authors = [{ name = "Daniil Nizdolin", email = "nizdolin@gmail.com" }]
requires-python = ">=3.13,<4"
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "fastapi>=0.135.1",
    "httpx>=0.28.1",
    "motor>=3.7.1",
    "punq>=0.7.0",
    "uvicorn>=0.41.0",
    "websockets>=16.0",
]

[dependency-groups]
dev = [
    "ipython>=9.10.0",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]

[tool.uv]
package = false
default-groups = "all"

[build-system]
requires = ["uv_build>=0.10.7,<0.11.0"]
build-backend = "uv_build"


[tool.black]
line-length = 120
exclude = """
(
    .venv
    | venv
    | flake-report
)
"""


[tool.isort]
profile = "wemake"
default_section = "THIRDPARTY"
known_first_party = "wemake_python_styleguide*"
skip_glob = ["**/__pycache__", ".venv", "venv", ".chroma", "flake-report"]
line_length = 120


[tool.flake8]
format = "wemake"
show-source = true
statistics = "false"
doctests = true
select = "C,E,F,W,B,B950"
ignore = """
B024,
C812,C815,C816,C408,C901,\
E701,E704,\
F821,\
W503,\
WPS100,WPS110,WPS114,WPS115,\
WPS201,WPS202,WPS203,WPS210,WPS211,WPS213,WPS214,WPS215,WPS216,WPS219,WPS220,WPS221,WPS222,WPS226,WPS229,WPS230,WPS231,WPS235,WPS237,\
WPS305,WPS306,WPS318,WPS319,WPS320,WPS332,WPS337,WPS347,WPS348,\
WPS400,WPS402,WPS404,WPS407,WPS410,WPS412,WPS421,WPS425,WPS430,WPS432,WPS442,WPS462,WPS463,WPS472,\
WPS501,WPS503,WPS510,\
WPS601,WPS602,WPS604,WPS615
"""
max-line-length = 120
strictness = "long"
docstring-style = "numpy"
exclude = ["**/__pycache__", ".venv", "venv", "flake-report", "**/tests/**"]
extend-immutable-calls = "fastapi.Depends, fastapi.params.Depends, Depends, Body"
per-file-ignores = ["**/__init__.py:WPS300"]
inline-quotes = "\""


[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "function"
